<resources>
    <string name="app_name">e-Mawang</string>
    <string name="title_home">Beranda</string>
    <string name="title_dashboard">Permohonan</string>
    <string name="title_notifications">Pengaturan</string>
    <string name="logo_app">logo app</string>
    <string name="login_page">login page image</string>
    <string name="forgot_password">Lupa password?</string>
    <string name="sign_in">Sign In</string>
    <string name="tv_email">Email</string>
    <string name="tv_role">Role</string>
    <string name="input_email">Masukkan email Anda</string>
    <string name="tv_password">Password</string>
    <string name="input_password">Masukkan password Anda</string>
    <string name="had_account">Sudah punya akun? Klik</string>
    <string name="here">disini.</string>
    <string name="sign_up">Sign Up</string>
    <string name="input_name">Masukkan nama Anda</string>
    <string name="tv_name">Nama</string>
    <string name="tv_lingkungan">Lingkungan</string>
    <string name="tv_rt">RT</string>
    <string name="tv_rw">RW</string>
    <string name="forgot_welcome">Reset Password</string>
    <string name="history">Riwayat Permohonan</string>
    <string name="tv_nik">NIK</string>
    <string name="input_nik">Masukkan NIK Anda</string>
    <string name="tv_ttl">Tempat/Tgl Lahir</string>
    <string name="input_ttl">Masukkan tempat/tgl lahir Anda</string>
    <string name="tv_job">Pekerjaan</string>
    <string name="input_job">Masukkan pekerjaan Anda</string>
    <string name="tv_religion">Agama</string>
    <string name="tv_address">Alamat</string>
    <string name="input_address">Masukkan alamat Anda</string>
    <string name="tv_letter">Jenis Surat</string>
    <string name="tv_upload">Silakan unggah dokumen yang diperlukan untuk proses permohonan Anda.</string>
    <string name="tv_info">Informasi Persyaratan Dokumen (?)</string>
    <string name="tv_kk">Kartu Keluarga (KK)</string>
    <string name="choose_file">Pilih file</string>
    <string name="tv_ktp">Kartu Tanda Penduduk (KTP)</string>
    <string name="tv_upload_document">Unggah Dokumen</string>
    <string name="submit">Submit</string>
    <string name="delete_account">Hapus Akun</string>
    <string name="change_password">Reset Password</string>
    <string name="logout">Logout</string>
    <string name="account_setting">Pengaturan Akun</string>
    <string name="requirements">Persyaratan Dokumen</string>
    <string name="requirements_kk">1. Buku Nikah/Akta Perkawinan bagi yang sudah menikah.\n2. Surat Keterangan Pindah Datang (bagi penduduk datang).</string>
    <string name="requirements_ktp">1. Kartu Keluarga.\n2. Surat Keterangan Hilang KTP dari Kapolsek (jika KTP yang lama hilang).</string>
    <string name="tv_tidak_mampu">Surat Keterangan Tidak Mampu</string>
    <string name="requirements_tidak_mampu">1. Kartu Keluarga (KK).\n2. Kartu Tanda Penduduk (KTP).\n3. Surat Pernyataan Tidak Mampu yang bersangkutan, disertai meterai sebesar Rp10.000.</string>
    <string name="tv_pindah">Surat Keterangan Pindah</string>
    <string name="requirements_pindah">1. Kartu Keluarga (KK).\n2. KTP (bagi yang pindah).\n3. Buku nikah (bagi yang sudah pindah).\n4. Pas photo berwarna ukuran 4 x 6.</string>
    <string name="tv_kelahiran">Surat Keterangan Kelahiran</string>
    <string name="requirements_kelahiran">1. Kartu Keluarga (KK).\n2. Surat keterangan lahir asli dari rumah sakit/bidan.\n3. Surat nikah orang tua.\n4. KTP kedua orang tua.\n5. KTP 2 orang saksi.</string>
    <string name="tv_kematian">Surat Keterangan Kematian</string>
    <string name="requirements_kematian">1. KTP yang Meninggal\n2. KK dimana yang Meninggal Terdaftar\n3. Surat Keterangan Kematian dari Dokter/Rumah Sakit/Kepolisian\n4. KTP Pelapor/Pemohon</string>
    <string name="tv_beasiswa">Surat Keterangan Beasiswa</string>
    <string name="requirements_beasiswa">1. Kartu Keluarga (KK).\n2. Kartu Tanda Penduduk (KTP).\n3. Kartu Hasil Studi (KHS) Semester terakhir\n4. Kartu Tanda Mahasiswa (KTM).</string>
    <string name="tv_skck">Surat Keterangan Catatan Kepolisian (SKCK)</string>
    <string name="requirements_skck">1. Kartu Keluarga (KK).\n2. Kartu Tanda Penduduk (KTP).\n3. Akta Kelahiran.</string>
    <string name="tv_nikah">Surat Keterangan Nikah (SKN)</string>
    <string name="requirements_nikah">1. Kartu Tanda Penduduk (KTP).\n2. Kartu Keluarga (KK).\n3. Ijazah terakhir.\n4. Akta Kelahiran.\n5. Pasfoto 3x4 (3 lembar).\n6. Pembayaran PBB tahun berjalan.</string>
    <string name="tv_usaha">Surat Keterangan Usaha</string>
    <string name="requirements_usaha">1. Kartu Keluarga (KK).\n2. Kartu Tanda Penduduk (KTP).\n3. Bukti Lunas PBB.\n5. Foto Usaha.</string>
    <string name="tv_situ">Surat Izin Tempat Usaha (SITU)</string>
    <string name="requirements_situ">1. Akta Pendirian Perusahaan.\n2. Akta Perubahan Terakhir.\n3. Keputusan Pengesahan Akta sebagai Badan Hukum.\n4. KTP (Direktur/Pemilik).\n5. NPWP (bila Perpanjangan).\n6. SITU Lama (bila Perpanjangan).\n7. Pas Photo 3x4 Berwarna (2 Lembar).</string>
    <string name="understand">Mengerti</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_account">Buat Akun Baru</string>
    <string name="kl_setting">Kelola Akun KL</string>
    <string name="rw_setting">Kelola Akun RW</string>
    <string name="rt_setting">Kelola Akun RT</string>
    <string name="list">Daftar Permohonan</string>
    <string name="no_account">Belum punya akun? Klik</string>
    <string name="new_account_ask">Ingin buat akun baru? Klik</string>
    <string name="reset">Reset</string>
    <string name="file_name">File Name</string>
    <string name="remove">Remove</string>
    <string name="detail_page">DETAIL PERMOHONAN</string>
    <string name="reject">Tolak</string>
    <string name="accept">Terima</string>
    <string name="tv_document">Lampiran Dokumen</string>
    <string name="tv_accept">Harap periksa dan pastikan semua data sudah akurat. Klik “Terima” untuk memberikan persetujuan resmi.</string>
    <string name="create_account">Buat Akun</string>
    <string name="undo">Batal membuat akun? Klik</string>
    <string name="tv_instruction">"Silakan masukkan alamat email akun Anda di bawah dan klik tombol “Reset.” Anda akan menerima email yang berisi link untuk mengatur kata sandi baru.  "</string>
    <string name="letter_type">Letter Type</string>
    <string name="applicant_name">Applicant Name</string>
    <string name="upload_date">Upload Date</string>
    <string name="status">Status</string>
    <string name="alasan_penolakan">Alasan Penolakan</string>
    <string name="done">Selesai</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="input_notes">Masukkan alasan penolakan</string>
    <string name="title_cetak">Cetak\n</string>
    <string name="cancel">Batalkan Permohonan</string>
</resources>